[package]
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
description = "An adaptor that chunks up elements and flushes them after a timeout or when the buffer is full."
license = "MIT OR Apache-2.0"
name = "futures-stream-batch"
version = "0.2.0"
edition = "2018"

[dependencies]
futures-preview = "0.3.0-alpha.19"
futures-timer = "1.0.2"
pin-utils = "0.1.0-alpha.4"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
